ansible/templates/gateway/gateway-generic-template.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    release: evtmanager
  name: evtmanager-gateway-allow-iduc
  namespace: noi
spec:
  ingress:
  - from: []
    ports:
      - protocol: TCP
        port: 4101
  podSelector:
    matchLabels:
      release: evtmanager
      appClass: objserv
  policyTypes:
  - Ingress
---
kind: Service
apiVersion: v1
metadata:
  name: evtmanager-objserv-agg-primary
  namespace: cp4waiops
spec:
  type: ExternalName
  externalName: evtmanager-objserv-agg-primary.noi.svc.cluster.local
  ports:
  - port: 4100
    name: primary-tds-port
  - port: 4101
    name: primary-iduc-port
---
kind: Service
apiVersion: v1
metadata:
  name: evtmanager-objserv-agg-backup
  namespace: cp4waiops
spec:
  type: ExternalName
  externalName: evtmanager-objserv-agg-backup.noi.svc.cluster.local
  ports:
  - port: 4100
    name: backup-tds-port
  - port: 4101
    name: backup-iduc-port
  - port: 4300
    name: agg-gate-tds-port
